H264: Use macroblock pair to calculate H264 decoding parameter under MBAFF flag

Based on the H264 spec the macroblock pair should be used to calculate
the corresponding parameters under MBAFF.(mb-adaptive frame-field).
Otherwise the wrong parameter is sent to GPU HW.

Fix the GPU hang issue in https://bugs.freedesktop.org/show_bug.cgi?id=91207

Tested-by: Lim, Siew Hoon <siew.hoon.lim@intel.com>
Signed-off-by: Zhao Yakui <yakui.zhao@intel.com>
(cherry picked from commit 7bb3658212f49a6f8d3d61b0b5d161aca73c2a11)